<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="0dp"
        android:fitsSystemWindows="false">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/infoToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_baseline_navigate_before"
            app:title="@string/during_earthquake"
            app:titleTextColor="?attr/colorOnPrimary"
            android:background="@color/purple_500"
            app:titleCentered="true"
            app:titleMargin="@dimen/_2sdp"
            app:titleMarginStart="@dimen/_2sdp" />

        <ScrollView
            tools:context=".presentation.info.InfoFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="0dp">




                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_142sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_45sdp"
                    android:src="@drawable/inside"
                    android:layout_marginTop="@dimen/_10sdp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/inside"
                    android:textColor="?attr/colorSecondary"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_142sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_45sdp"
                    android:src="@drawable/outside"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/outside"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSecondary"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_142sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/_45sdp"
                    android:layout_marginEnd="@dimen/_45sdp"
                    android:src="@drawable/driving"
                    android:layout_marginTop="@dimen/_10sdp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/driving"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSecondary"/>



            </LinearLayout>

        </ScrollView>




    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>




