<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.detail.DetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detailAppBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/detailToolbar"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                app:navigationIcon="@drawable/ic_baseline_navigate_before"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/general_info"
                app:titleTextColor="?attr/colorOnPrimary"/>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailAppBar"
            android:text="@string/location"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="?attr/colorSecondary"
            android:layout_marginStart="@dimen/_5sdp"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cw_map"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:strokeWidth="@dimen/_1sdp"
            app:strokeColor="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location"
            android:layout_margin="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"/>

                <TextView
                    android:id="@+id/tvLoc"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:layout_weight="1"
                    android:text="asdasdsadasdasdas"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tv_population"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:textSize="@dimen/_12ssp"
                    android:text="@string/population"
                    android:textColor="?attr/colorSecondary"/>



            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/closestCities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/closest_cities"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cw_map" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvClosestCities"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:elevation="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closestCities"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="@dimen/_1sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_closestCities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>




        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/airports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvClosestCities"
            android:text="@string/airports"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_20sdp"
            android:textColor="?attr/colorSecondary"
            android:textStyle="bold"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvAirports"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            app:layout_constraintTop_toBottomOf="@id/airports"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_5sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:strokeColor="@color/purple_500"
            app:strokeWidth="@dimen/_1sdp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_airports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
